small fix for height of iframe, problem on partner find, edit button was not visible

--- a/js/css/main.css
+++ b/js/css/main.css
@@ -25,7 +25,7 @@ body {
 
 .openpetraiframe {
   width: 100%;
-  height: 1000px;
+  height: 2000px;
   overflow: hidden;
   border: none;
 }
